<resources>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="save">저장</string>
    <string name="canc">취소</string>
    <!--    <stirng name="title_activity_kitchen">TheTHsKitchen_GIT_Ver2021072601</stirng>-->

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tool">조리도구</string>
    <string name="grill">그릴</string>
    <string name="micro">전자레인지</string>
    <string name="multi">전기밥솥/멀티쿠커</string>
    <string name="oven">오븐</string>
    <string name="sous">수비드</string>
    <string name="steam">찜기</string>
    <string name="stove">레인지/인덕션</string>
    <string name="blender">블랜더</string>
    <string name="airfryer">에어프라이어</string>

    <string name="ctime">조리시간</string>
    <string name="ptime">준비시간</string>
    <string name="min">분</string>
    <string name="hour">시간</string>
    <string name="day">일</string>
    <string name="week">주</string>
    <string name="pc">개</string>
    <string name="bottle">병</string>
    <string name="serve">인분</string>
    <string name="glass">잔</string>
    <string name="inputdate">입력일</string>
    <string name="space" translatable="false"></string>
    
    <string name="ingredients">재료</string>
    <string name="recipes">조리법</string>

    <string name="option">(선택)</string>

    <string name="qunt">사용량</string>

    <string name="youtubeLink">https://www.youtube.com/channel/UCM_NeHV1e_QZ5dYr-C-TJqA</string>

    <string name="menu_link">Youtube바로가기</string>
    <string name="menu_search">검색</string>
    <string name="menu_recommandList">추천요리</string>
    <string name="menu_refrigerator">우리집 냉장고</string>
    <string name="menu_kitchen">우리집 부엌</string>
    <string name="menu_cart">장바구니</string>
    <string name="menu_favorites">즐겨찾기</string>
    <string name="menu_setting">설정</string>
    <string name="menu_help">도움말</string>
    <string name="menu_contact">연락하기</string>
    <string name="menu_version">버전정보</string>


    <string name="refrigerator_add_name"> 재료명을 입력하세요 </string>
    <string name="refrigerator_add_desc"> 메모를 남기세요 </string>
    <string name="refrigerator_add_title">재료 추가 </string>
    <string name="refrigerator_update_title">재료</string>

    <string name="cart_add_name"> 재료명을 입력하세요 </string>
    <string name="cart_add_desc"> 메모를 남기세요 </string>
    <string name="cart_add_title">재료 추가 </string>
    <string name="cart_update_title">재료</string>

    <string name="btn_share">공유</string>
    <string name="btn_link">Youtube</string>

    <string name="title_share">친구에게 공유하기</string>

    <string name="set_youtube">유튜브 설정</string>
    <string name="set_caption">자막</string>
    <string name="set_play">자동시작</string>
    <string name="set_language">언어</string>
    <string name="set_languagesetting">언어설정</string>

    <string name="btn_skip">건너뛰기</string>
    <string name="btn_close">다시보지않기</string>

    <string name="recommend_nodata">아직 추천요리가 없어요.\n냉장고에 재료를 추가해보세요</string>

    <!--    Message-->
    <string name="msg_add_NoName"> 재료명을 입력하세요</string>
    <string name="msg_save_data" translatable="false">저장하였습니다</string>
    <string name="msg_move_data">재료가 냉장고로 이동했어요</string>
    <string name="msg_exit">뒤로가기를 한 번 더 누르면 종료됩니다</string>
    <string name="app_name">슬기로운 식샤생활</string>

    <!--    Hint-->
    <string name="hint_search">검색어를 입력하세요</string>

    <!--    Help -->
    <string name="h_r_empty1">냉장고에 입력된 식재료로 요리를 추천합니다</string>
    <string name="h_r_empty2">냉장고에 식재료를 추가하세요</string>
    <string name="h_c_empty1">쇼핑목록의 식재료를 냉장고에 추가 할 수 있어요</string>
    <string name="h_c_empty2">쇼핑목록에 식재료를 추가하세요</string>
    <string name="h_f_empty1">상세화면에서 즐겨찾기를 추가 할 수 있어요</string>
    <string name="h_k_empty1">선택된 조리도구로 요리를 추천합니다</string>
    <string name="h_k_empty2">사용 가능한 조리도구를 선택하세요</string>
    <string name="h_qunt_adj">원하는 양으로 변경하세요</string>
    <string name="h_cart">쇼핑목록에 담을 수 있어요</string>
    <string name="h_time">동영상을 해당 조리법으로 이동시켜요</string>
    <string name="h_movecart">쇼핑목록으로 이동해요</string>
    <string name="h_recommand">나의 냉장고에 설정된 재료와 나의 주방에 설정된 조리도구로 요리를 추천 해요.</string>
    <string name="h_click">클릭하면 상세내역을 볼 수 있어요</string>
    <string name="h_refrigerator">재료를 냉장고로 이동해요</string>

    <string name="help_1_1">조리법을 클릭하세요.\n영상이 해당 구간으로 이동합니다</string>
    <string name="help_1_2">원하는 양 만큼 재료를 수정 할 수 있어요</string>
    <string name="help_1_3">재료를 쇼핑목록에 담아요\n쉽게 메모 할 수 있어요 </string>

    <string name="help_2_1">원하는 요리, 재료를 검색해 보세요\n다양한 조리법을 찾을 수 있어요\n조회속도는 점점 빨라져요</string>
    <string name="help_2_2">선택된 조리도구와, 식재료가 포함된 요리를 추천해요\n주재료만 입력하면 빠른 조회가 가능해요</string>

    <string name="help_3_1">사용 가능한 조리도구를 선택하세요</string>
    <string name="help_3_2">냉장고에 재료를 입력하세요\n주재료만 입력하면 빠른 조회가 가능해요</string>

    <string name="help_4_1">쇼핑목록을 입력해요\n조리법 상세페이지에서도 쉽게 입력 할 수 있어요\n쇼핑목록 재료들을 냉장고로 이동 할 수 있어요</string>
    <string name="help_4_2">자주보는 영상을 조리법 상세페이지에서 등록 할 수 있어요</string>

<!--    AD-->
    <string name="ad_id_search" translatable="false">ca-app-pub-3974703588591994/1278961182</string>
    <string name="ad_id_kitchen" translatable="false">ca-app-pub-3974703588591994/7227978781</string>
    <string name="ad_id_refrigerator" translatable="false">ca-app-pub-3974703588591994/1148574024</string>
    <string name="ad_id_cart" translatable="false">ca-app-pub-3974703588591994/3586394475</string>
    <string name="ad_id_favorites" translatable="false">ca-app-pub-3974703588591994/4896247340</string>
    <string name="ad_id_detail" translatable="false">ca-app-pub-3974703588591994/3583165673</string>

    <string name="ad_id_detailf" translatable="false">ca-app-pub-3974703588591994/3980667216</string>
</resources>