<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/menu_refrigerator"
            android:icon="@drawable/ic_baseline_kitchen_24"
            android:title="@string/menu_refrigerator"/>
        <item android:id="@+id/menu_kitchen"
            android:icon="@drawable/ic_baseline_local_dining_24"
            android:title="@string/menu_kitchen"/>
        <item android:id="@+id/menu_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_cart"/>
        <item android:id="@+id/menu_favorites"
            android:icon="@drawable/ic_baseline_star_24"
            android:title="@string/menu_favorites"/>
        <item android:id="@+id/menu_help"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/menu_help"/>
    </group>

</menu>