<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00ff0000"
    tools:context=".Help1_Fragment">

    <ImageView
        android:id="@+id/imgHelp1"
        android:layout_width="194dp"
        android:layout_height="389dp"
        android:layout_marginBottom="20dp"
        android:adjustViewBounds="true"
        android:src="@drawable/help1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="4dp"
        android:text="@string/help_1_2"
        android:textColor="@color/help_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgHelp1"
        app:layout_constraintEnd_toStartOf="@+id/imgHelp1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgHelp1"
        app:layout_constraintVertical_bias="0.437" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/help_1_1"
        android:textColor="@color/help_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgHelp1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toEndOf="@+id/imgHelp1"
        app:layout_constraintTop_toTopOf="@+id/imgHelp1"
        app:layout_constraintVertical_bias="0.686" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="4dp"
        android:text="@string/help_1_3"
        android:textColor="@color/help_gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgHelp1"
        app:layout_constraintEnd_toStartOf="@+id/imgHelp1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgHelp1"
        app:layout_constraintVertical_bias="0.975" />

</androidx.constraintlayout.widget.ConstraintLayout>