<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/youtubeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

    </com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleIList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:contextClickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/recycleRList"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_enter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleRList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/recycleIList"
        app:layout_constraintTop_toBottomOf="@+id/txtTool" />

    <Button
        android:id="@+id/btn_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        android:text="@string/menu_favorites"
        app:layout_constraintEnd_toStartOf="@+id/btn_share"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/youtubeView"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:gravity="left|center_vertical"
        android:text="TextView"
        app:layout_constraintEnd_toStartOf="@+id/btn_enter"
        app:layout_constraintTop_toBottomOf="@+id/btn_favorites" />

    <TextView
        android:id="@+id/txtPTEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/ptime"
        app:layout_constraintEnd_toStartOf="@+id/txtPtime"
        app:layout_constraintTop_toBottomOf="@+id/youtubeView" />

    <TextView
        android:id="@+id/txtPtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/youtubeView" />

    <TextView
        android:id="@+id/txtCTEXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/ctime"
        app:layout_constraintEnd_toStartOf="@+id/txtCtime"
        app:layout_constraintTop_toBottomOf="@+id/txtPTEXT" />

    <TextView
        android:id="@+id/txtCtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPtime" />

    <ImageButton
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintTop_toBottomOf="@+id/youtubeView"
        app:srcCompat="@drawable/ic_baseline_share_24" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toStartOf="@+id/txtPTEXT"
        app:layout_constraintTop_toBottomOf="@+id/youtubeView"
        app:srcCompat="@drawable/ic_baseline_link_24" />

    <EditText
        android:id="@+id/editQunt"
        android:layout_width="37dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="bottom|right"
        android:inputType="number"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txtUnit"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_favorites" />

    <ImageView
        android:id="@+id/btn_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/recycleRList"
        app:layout_constraintTop_toBottomOf="@+id/btn_favorites"
        app:srcCompat="@drawable/ic_baseline_subdirectory_arrow_left_24" />

    <TextView
        android:id="@+id/txtTool"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/recycleIList"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

</androidx.constraintlayout.widget.ConstraintLayout>